--- a/pages/insertionSort.html
+++ b/pages/insertionSort.html
@@ -71,6 +71,7 @@
 
         <div>
             <h2 id="operations">Выполнено операций: 0</h2>
+            <h2 id="swaps">Выполнено свапов: 0</h2>
             <h2 id="checks">Выполнено проверок: 0</h2>
         </div>
 
@@ -97,6 +98,7 @@
     const speedInput = document.getElementById("speed");
     let checksHTML = document.getElementById("checks");
     let opersHTML = document.getElementById("operations");
+    let swapsHTML = document.getElementById("swaps");
 
     // РАБОТА ПОЛЗУНОЧКА
     speedInput.addEventListener("input", () => {
