--- a/pages/quickSort.html
+++ b/pages/quickSort.html
@@ -51,7 +51,7 @@
     <br/>Сортировка может быть выполнена по возрастанию или убыванию, в зависимости от <span>заданных условий</span>.
   </p>
   <h2 id="link">
-    <a href="./quickSort100.html" target="_blank">Быстрая сортировка – пример на 100 элементов</a>
+    <a href="./quickSort100.html">Быстрая сортировка – пример на 100 элементов</a>
   </h2>
 </div>
 
