Чёт на подобии предрелиза
Вроде всё готово, но кто знает, что я ещё могу сделать... Задеплоется и уже хорошо (:

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="./pages/bubbleSort.html">Сортировка пузырьком</a>
         <a href="./pages/quickSort.html">Быстрая сортировка</a>
         <a href="./pages/selectionSort.html">Сортировка выбором</a>
-        <a href="./pages/\.html">Сортировка бого</a>
+        <a href="./pages/bogoSort.html">Сортировка бого</a>
         <button class="menu-button" onclick="toggleMenu()">Меню</button>
     </nav>
 
@@ -80,8 +80,10 @@
         <!-- Видео -->
         <h2 id="video">Видео о сортировке</h2>
       <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZZuD6iUe3Pc?si=HP_1h7D-iOtVboCi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <br>
+            <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZZuD6iUe3Pc?si=HP_1h7D-iOtVboCi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        <br>
         <!-- Ссылки и якоря -->
         <h4 id="trivia">Полезные ссылки</h4>
         <p>Узнать больше про <a href="https://ru.wikipedia.org/wiki/Алгоритм_сортировки" target="_blank">алгоритмы сортировки</a> можно на Википедии.</p>
