--- a/pages/insertionSort.html
+++ b/pages/insertionSort.html
@@ -44,12 +44,32 @@
 
 
 <div class="content">
+
     <h1><strong>Сортировка вставкой</strong></h1>
-    <h2 id="description">Описание</h2>
+    <img class="sortImages" src="../images/forSortings/insertion.gif" alt="Сортировка Вставкой - визуализация">
+    <h2>Краткая информация</h2>
     <p>
-        <strong>Алгоритмы сортировки</strong> — это <em>методы</em>, которые упорядочивают элементы в массиве или списке в определённом порядке.
-        <br/>Сортировка может быть выполнена по возрастанию или убыванию, в зависимости от <span>заданных условий</span>.
+        <strong>Insertion Sort</strong> — это простейший <em>алгоритм сортировки</em>, который проходит много раз по массиву и
+        двигает каждый новый элемент максимально влево до тех пор, пока не встретит элемент, меньше текущего.<br>
+        Тоже очень простой алгоритм сортировки, который может использоваться для учёбы.
     </p>
+
+    <h2>Алгоритм</h2>
+    <ol>
+        <li>Идём слева направо: проверяем каждый следующий элемент i</li>
+        <li>Начинаем двигать элемент i до тех пор, пока i < (i + 1)</li>
+        <li>Проверяем отсортированность массива, при необходимости сортируем заново.</li>
+    </ol>
+
+    <h2>Сложность</h2>
+    <h3>
+        <li>Худшее время: O(n<span class="square">2</span>)</li>
+        <li>Лучшее время: O(n)</li>
+        <li>Среднее время: O(n<span class="square">2</span>)</li>
+    </h3>
+
+    <h2>Исходный код:</h2>
+    <a href="https://github.com/Ronopoldo/InsertionSort" target="_blank">Ссылка на код на моём GitHub</a>
 </div>
 
 
@@ -59,9 +79,9 @@
 <div class="sortingBlock">
     <div class="sortingContainer">
         <div class="controls">
-            <button onclick="startAnimation(insertionSort)">Пуск анимации</button>
-            <button onclick="stopAnimation()">Остановка анимации</button>
-            <button onclick="shuffleData()">Перемешать</button>
+            <button class="controlButton" onclick="startAnimation(insertionSort)">Пуск анимации</button>
+            <button class="controlButton" onclick="stopAnimation()">Остановка анимации</button>
+            <button class="controlButton" onclick="shuffleData()">Перемешать</button>
             <input type="range" id="speed" min="0" max="1000" value="500" />
         </div>
 
