--- a/pages/quickSort.html
+++ b/pages/quickSort.html
@@ -44,16 +44,63 @@
 
 
 <div class="content">
+
   <h1><strong>Быстрая сортировка</strong></h1>
-  <h2 id="description">Описание</h2>
+  <img class="sortImages" src="../images/forSortings/quick.gif" alt="Сортировка Бого - визуализация">
+  <h2>Краткая информация</h2>
   <p>
-    <strong>Алгоритмы сортировки</strong> — это <em>методы</em>, которые упорядочивают элементы в массиве или списке в определённом порядке.
-    <br/>Сортировка может быть выполнена по возрастанию или убыванию, в зависимости от <span>заданных условий</span>.
+    <strong>Quick Sort</strong> — это эффективный <em>алгоритм сортировки</em>, который используется многими современными
+    программами и языками программирования.<br/>
+    Его суть в том, что он «мельчит» массив. Выбирает случайный ключевой элемент и затем сортирует части справа и слева
+    от себя  – все элементы меньше себя он двигает влево, а больше – вправо, выбрав такой же ключевой элемент, но уже в
+    более мелком массиве (подмассиве). Так он продолжает мельчить вплоть  до подмассива длиной 1, который уже не нужно
+    сортировать. Затем он меняет эти правые и левые части местами.
   </p>
-  <h2 id="link">
-    <a href="./quickSort100.html">Быстрая сортировка – пример на 100 элементов</a>
+
+  <h2>Интересное</h2>
+    <p>
+      Используется в куче популярных языков программирования, например:
+      <li>C</li>
+      <li>C++</li>
+      <li>Java</li>
+      <li>Python</li>
+      <li>PHP</li>
+    </p>
+  <h2>Трудности при создании этой страницы</h2>
+  <p>
+    К сожалению, я столкнулся с трудностями для создания этой страницы. На неё ушло больше времени среди всех страниц
+    из-за анимации этого алгоритма.<br>
+    Поскольку QuickSort подразумевает двигать группы элементов (подмассивы большие чем 1), то это стало проблемой,
+    ибо моя функция для движения столбиков подразумевает смену позиций у 2 столбиков по указанным индексам. <br>
+    Здесь же, где надо двигать группы столбиков, пришлось писать новую функцию, которую я отлаживал очень очень долго,
+    но так и не добился её тчательной работы.<br>
+    Поэтому пришлось откзааться от анимации столбиков, что означает, что они <strong>не двигаются</strong>, а просто телепортируются.<br>
+    Очень жаль, что так получилось, но времени и нервов на отладку всех багов не хватило (:
+  </p>
+  <h2>Алгоритм</h2>
+  <ol>
+    <li>Выбрать опорный (ключевой) элемент key.</li>
+    <li>Двигаем все элементы <strong>меньше</strong> опорного влево, а <strong>больше</strong> – вправо.</li>
+    <li>Сформировав «подмассив» левой и правой частей, выполняем к ним рекурсивно все эти шаги вплоть до подмассива длиной 1.</li>
+  </ol>
+
+  <h2>Сложность</h2>
+  <h3>
+    <li>Худшее время: O(n<span class="square">2</span>)</li>
+    <li>Лучшее время: O(n * log(n))</li>
+    <li>Среднее время: O(n * log(n))</li>
+  </h3>
+
+  <h2>Исходный код:</h2>
+  <a href="https://github.com/Ronopoldo/QuickSort" target="_blank">Ссылка на код на моём GitHub</a>
+
+  <br>
+  <p>Алгоритм может быть менее эффективным для сортировки <strong>маленьких</strong> массивов, но зато очень эффективным для <strong>больших</strong> массивов.</p>
+  <h2>
+    <a class = "inSiteLinks" href="./quickSort100.html">Quick Sort – пример на 100 элементов</a>
   </h2>
 </div>
+
 
 
 <!--<div class="controls">-->
@@ -62,9 +109,9 @@
 <div class="sortingBlock">
   <div class="sortingContainer">
     <div class="controls">
-      <button onclick="startAnimation(quickSort)">Пуск анимации</button>
-      <button onclick="stopAnimation()">Остановка анимации</button>
-      <button onclick="shuffleData()">Перемешать</button>
+      <button class="controlButton" onclick="startAnimation(quickSort)">Пуск анимации</button>
+      <button class="controlButton" onclick="stopAnimation()">Остановка анимации</button>
+      <button class="controlButton" onclick="shuffleData()">Перемешать</button>
       <input type="range" id="speed" min="0" max="1000" value="500" />
     </div>
 
