Доделал css и html до уровня ТЗ

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Алгоритмы сортировки на JavaScript</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .date {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
@@ -44,13 +49,12 @@
 
 
     <div class="content">
-        <h1><strong>Алгоритмы сортировки</strong></h1>
-        <h2 id="description">Описание термина</h2>
+        <h1 id="description"><strong>Алгоритмы сортировки</strong></h1>
         <p>
             <strong>Алгоритмы сортировки</strong> — это <em>методы</em>, которые упорядочивают элементы в массиве или списке в определённом порядке. 
-          <br/>Сортировка может быть выполнена по возрастанию или убыванию, в зависимости от <span>заданных условий</span>.
+          <br/>Сортировка может быть выполнена по возрастанию или убыванию, в зависимости от <span style="color: grey; font-weight: bold;">заданных условий</span>.
         </p>
-        
+
         <h2 id="history"><strong>История</strong></h2>
         
         <h3>Краткая история алгоритмов сортировки</h3>
@@ -86,12 +90,19 @@
         <br>
         <!-- Ссылки и якоря -->
         <h4 id="trivia">Полезные ссылки</h4>
-        <p>Узнать больше про <a href="https://ru.wikipedia.org/wiki/Алгоритм_сортировки" target="_blank">алгоритмы сортировки</a> можно на Википедии.</p>
+        <p>Узнать больше про <em>алгоритмы сортировки</em> можно на <a href="https://ru.wikipedia.org/wiki/Алгоритм_сортировки" target="_blank">Википедии</a>.</p>
+
+        <h3>Содержание страницы</h3>
+        <a href="#description">Описание</a><br/>
+        <a href="#history">История</a><br/>
+        <a href="#image">Визуализация алгоритма</a><br/>
+        <a href="#video">Видео про алгоритмы</a><br/>
+        <a href="#trivia">Полезные ссылки</a><br/>
 
         <!-- Разрыв строки -->
-        <p>Сделал Филиппов Иван из ПИН-14<br>11 октября</p>
+        <p class="date">Сделал Филиппов Иван из ПИН-14<br>11 октября</p>
 
-        <h5>2024</h5>
+        <h3 class="date">2024</h3>
     </div>
 
     <!-- Скрипт для работы разворачивающегося меню -->
