Добавляет новую сортировку – слиянием
2 новые страницы: про сортировку слиянием (Merge Sort) и та же страница, но со 100 элементами

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="./pages/quickSort.html">Быстрая сортировка</a>
         <a href="./pages/selectionSort.html">Сортировка выбором</a>
         <a href="./pages/bogoSort.html">Сортировка бого</a>
+        <a href="../pages/mergeSort.html">Сортировка слиянием</a>
         <button class="menu-button" onclick="toggleMenu()">Меню</button>
     </nav>
 
